# C610-objectTracker-demo2.0

./: README.docx  README.md
doc/: QCS610-objectTracker-demo-doc.docx  Video description.txt
objectTracker-2.0/: CMakeLists.txt  objectTracker  weston_dp_client
objectTracker-2.0/config/: CMakeLists.txt
objectTracker-2.0/config/include/: param_ops.h
objectTracker-2.0/config/src/: dictionary.cpp  iniparser.cpp  param.cpp
objectTracker-2.0/include/: bufmanager.hpp  gstcamera.h  gtkui.h  objecttracker.h  publicattr.h
objectTracker-2.0/libs/dsp/: README.md
objectTracker-2.0/libs/snpe/: README.md
objectTracker-2.0/res/: config.ini
objectTracker-2.0/snpe/include/zdl/: README.md
objectTracker-2.0/src/: gstcamera.cpp  objecttracker.cpp
objectTracker-2.0/test/: gst_test.cpp
objectTracker-2.0/utils/: timeutil.h
